--- a/Customer_Churn_Machine_Learning.ipynb
+++ b/Customer_Churn_Machine_Learning.ipynb
@@ -100,6 +100,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Importing Libraries"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -130,7 +137,6 @@
         }
       ],
       "source": [
-        "# @title Importing Libraries\n",
         "from sklearn.model_selection import train_test_split\n",
         "#from sklearn.linear_model import  Lasso, Ridge\n",
         "from sklearn.metrics import mean_squared_error,r2_score, mean_absolute_error #Metrics\n",
@@ -1338,6 +1344,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Facets Data Visualization"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -1368,7 +1381,7 @@
         }
       ],
       "source": [
-        "# @title Facets Data Visualization\n",
+        "#Facets Visualization only works in local or using google colab\n",
         "fsg = FeatureStatisticsGenerator()\n",
         "dataframes = [\n",
         "    {'table': churnData, 'name': 'trainData'}]\n",
@@ -3202,8 +3215,8 @@
         "ax.set_xlabel(\"False Positive Rate\", fontsize = 15)\n",
         "ax.set_ylabel(\"True Positive Rate\", fontsize = 15)\n",
         "\n",
-        "ax.set_xticks(np.linspace(0, 1, 11));\n",
-        "ax.set_yticks(np.linspace(0, 1, 11));\n",
+        "ax.set_xticks(np.linspace(0, 1, 11))\n",
+        "ax.set_yticks(np.linspace(0, 1, 11))\n",
         "\n",
         "plt.title('curva roc')\n",
         "plt.legend(loc=\"lower right\")\n",
